# AbyssalTracker

./: .gitignore  abyssal_tracker_wiki_draft.md  features.md  main.py  price.py  refactoring_plan.md  requirements.txt  set_version.bat  streamlit_app.py  tracker.py  ui_popup.py  ui_stats_display.py
.github/workflows/: release.yml
eve-abyssal-tracker-tauri/: index.html  latest.json  package-lock.json  package.json
eve-abyssal-tracker-tauri/public/: abyssal-result.html
eve-abyssal-tracker-tauri/src/: App.css  App.tsx  types.ts
eve-abyssal-tracker-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
eve-abyssal-tracker-tauri/src-tauri/capabilities/: abyssal-result.json  default.json
eve-abyssal-tracker-tauri/src-tauri/src/: abyssal_data_analyzer.rs  abyssal_data_manager.rs  abyssal_run_tracker.rs  config_manager.rs  eve_api.rs  eve_log_processor.rs  icon_cache.rs  lib.rs  log_monitor.rs  main.rs  system_change_processor.rs
eve-abyssal-tracker-tauri/src/components/: AbyssalResultModal.css  AbyssalResultModal.tsx  DailyBriefing.css  DailyBriefing.tsx  DailyStatsDisplay.css  DailyStatsDisplay.tsx  DailySummary.tsx  FilterControls.tsx  InitialSetup.css  InitialSetup.tsx  LoadingProgress.css  LoadingProgress.tsx  NotifierPopup.css  NotifierPopup.tsx  Settings.css  (+12 more)
src/logic/: abyssal_data_analyzer.py  abyssal_data_manager.py  config_manager.py  constants.py  eve_api.py  eve_log.py  global_abyssal_data_manager.py  price.py  system_change_processor.py  tracker.py
src/ui/: ui_notifier.py  ui_popup.py  ui_stats_display.py
streamlit_pages/: stats_display.py
(+10 files in other folders)
