[package]
name = "eve-abyssal-tracker-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eve_abyssal_tracker_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
config = "0.13"
ini = "1.3.0"
anyhow = "1.0"
csv = "1.3.1"
configparser = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
regex = "1"
walkdir = "2"
glob-match = "0.2"
lazy_static = "1.4"
notify = "6"
crossbeam-channel = "0.5"
log = "0.4"
polars = { version = "0.39", features = ["json", "lazy"] }
whoami = "1.5"
urlencoding = "2.1"

